change layout gap and fixed initial text width

--- a/src/styles/layout/layout.scss
+++ b/src/styles/layout/layout.scss
@@ -1,6 +1,6 @@
 .layout{
     display: grid;
-    gap: .5rem;
+    gap: 1px;
     width: 100%;
     height: 100%;
     position: reltaive;
